# ecfr-analyzer

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  mkdocs.yml  pyproject.toml  tox.ini
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 1c3024451e5f_convert_title_and_part_to_varchar.py  1db8fa14de36_add_keywords_to_title_metadata.py  dea0cacdf16b_initial_schema.py
docs/: index.md  modules.md
scripts/: create_db.py  fetch_ecfr.py  take_screenshots.py
src/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
src/app/routers/: __init__.py  agencies.py  titles.py  web.py
src/app/templates/: agencies.html  agency_details.html  base.html  cfr_detail.html  index.html  local_search_results.html  search.html  search_results.html  titles.html
tests/: conftest.py  test_api_agencies.py  test_api_titles.py  test_fetch_ecfr.py  test_foo.py  test_models.py  test_web_routes.py
